--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=Restful API Template
 
-spring.datasource.url=jdbc:mysql://192.168.178.120:3306/userdb
+spring.datasource.url=jdbc:mysql://192.168.178.120:3306/userdb?maxAllowedPacket=33554432
 spring.datasource.username=pc_polar
 spring.datasource.password=08213edd
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-server.port=8080
+server.port=65123
 server.address=0.0.0.0
